--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: macos-15
     env:
       XCODE_PATH: "/Applications/Xcode_16.app"
+      # These variables are defined in the repository settings
       PROJECT_NAME: ${{ vars.PROJECT_NAME }}
       INSTALLER_CERTIFICATE: ${{ vars.DEV_INSTALLER_CERT_CN }}
 
@@ -171,3 +172,4 @@ jobs:
         with:
           name: ${{ env.PKG_NAME }}
           path: artifacts/
+          retention-days: 14
